--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </main>
         
         <footer>
-                <p>®2024 Douglas Jardim</p>
+                <p>© 2024 Douglas Jardim  </p>
                 <div id="footer-icon">
                     <a href="https://github.com/douglasgjar" target="_blank"><img class="icon-img" src="assets/github.png" alt="github icon"></a>
                     <a href="https://www.behance.net/douglasjardim" target="_blank"><img class="icon-img" src="assets/behance.png" alt="behance icon"></a>
