--- a/index.html
+++ b/index.html
@@ -33,12 +33,21 @@
         <footer>
                 <p>© 2024 Douglas Jardim  </p>
                 <div id="footer-icon">
-                    <a href="https://github.com/douglasgjar" target="_blank"><img class="icon-img" src="assets/github.png" alt="github icon"></a>
-                    <a href="https://www.behance.net/douglasjardim" target="_blank"><img class="icon-img" src="assets/behance.png" alt="behance icon"></a>
-                    <a href="https://www.linkedin.com/in/douglasgjar/" target="_blank"><img class="icon-img" src="assets/linkedin.svg" alt="linkedin icon"></a> 
-                    <a href="mailto:contato@douglasgjar" target="_blank"><img class="icon-img" src="assets/gmail.png" alt="gmail icon"></a>
-                    <a href="https://instagram.com/douglasgjar" target="_blank"><img class="icon-img" src="assets/instagram.png" alt="instagram icon"></a>
-    
+                    <a href="https://github.com/douglasgjar" target="_blank">
+                        <img class="icon-img" src="assets/github.png" alt="github icon">
+                    </a>
+                    <a href="https://www.behance.net/douglasjardim" target="_blank">
+                        <img class="icon-img" src="assets/behance.png" alt="behance icon">
+                    </a>
+                    <a href="https://www.linkedin.com/in/douglasgjar/" target="_blank">
+                        <img class="icon-img" src="assets/linkedin.svg" alt="linkedin icon">
+                    </a> 
+                    <a href="mailto:contato@douglasgjar" target="_blank">
+                        <img class="icon-img" src="assets/gmail.png" alt="gmail icon">
+                    </a>
+                    <a href="https://instagram.com/douglasgjar" target="_blank">
+                        <img class="icon-img" src="assets/instagram.png" alt="instagram icon">
+                    </a>
                 </div>
         </footer>
 
